--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "npx tsc -b && npx vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "i18n-migrate": "node scripts/i18n-migrate.js"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.15",
