--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.87.4",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.1",
